Update footer copyright and add credit link

--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Hyla.life - Deccan Global Trading LLC. All rights reserved.</p>
+        <p>&copy; 2026 Hyla.life - Deccan Global General Trading FZE.<br/> All rights reserved.</p>
+        <p><a href="https://generalsoft.ae">Powered by Generalsoft FZ-LLC.</a></p>
         <p style="margin-top: 1rem; opacity: 0.8;">Pure Himalayan Salt for Mind, Body & Soul</p>
     </footer>
 
