updated Deccan name and GS link style

--- a/index.html
+++ b/index.html
@@ -253,6 +253,12 @@
                 gap: 1rem;
                 flex-wrap: wrap;
             }
+            a.generalsoft-link:link {
+                color: rgb(255, 238, 0); 
+            } 
+            a.generalsoft-link:visited {
+                color: rgb(139, 225, 139); 
+            }
         }
     </style>
 </head>
@@ -357,7 +363,7 @@
         <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem; line-height: 1.8;">
             At Hyla.life, we are dedicated to bringing you the finest Himalayan salt products sourced directly from ancient salt mines. Our mission is to help you harness the natural healing power of these pristine crystals for your medicinal, spiritual, health, and aesthetic needs. Every product we offer is carefully selected to ensure the highest quality and purity.
         </p>
-        <p class="company-name">Deccan Global Trading LLC</p>
+        <p class="company-name">Deccan Global General Trading FZE</p>
     </section>
 
     <section id="contact" class="section">
@@ -373,14 +379,14 @@
             </div>
             <div class="contact-item">
                 <span style="font-size: 1.5rem;">📍</span>
-                <span>Deccan Global Trading LLC</span>
+                <span>Deccan Global General Trading FZE</span>
             </div>
         </div>
     </section>
 
     <footer>
         <p>&copy; 2026 Hyla.life - Deccan Global General Trading FZE.<br/> All rights reserved.</p>
-        <p><a href="https://generalsoft.ae">Powered by Generalsoft FZ-LLC.</a></p>
+        <p><a href="https://generalsoft.ae" target="_blank" class="generalsoft-link">Designed by Generalsoft FZ-LLC.</a>
         <p style="margin-top: 1rem; opacity: 0.8;">Pure Himalayan Salt for Mind, Body & Soul</p>
     </footer>
 
